Ready for strict cut run

--- a/Fit.ipynb
+++ b/Fit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "96bd34bc-80e0-44c6-8720-3c02a6a67002",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "4c0e71a2-1534-4d5d-b72c-4e28b12fe02a",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "b13001ec-dc21-41ce-8e94-b76ef345d0f5",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "id": "dbf2077b-1402-4de2-8f2b-a7c832458905",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reading from ./data/Analyzed_Data_Full.csv.\n"
+      "reading from ./data/analyzed_data.csv.\n"
      ]
     }
    ],
@@ -88,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "id": "d7492123-f0d0-467e-a457-f787092f0bd7",
    "metadata": {},
    "outputs": [],
    "source": [
     "rest_e = theory.Mmu\n",
-    "bethe_min, bethe_max = 1, 10\n",
+    "bethe_min, bethe_max = 0.1, 100\n",
     "kinetic_es = tot_es - (rest_e/1000)\n",
     "bethe_regime = (kinetic_es > bethe_min) & (kinetic_es < bethe_max)\n",
     "\n",
@@ -102,9 +102,10 @@
     "low_pitch = unfiltered_pitches < 0.4 \n",
     "hi_pitch = unfiltered_pitches > 0.7\n",
     "\n",
-    "es = kinetic_es[bethe_regime]\n",
-    "dedxs = unfiltered_dedxs[bethe_regime]\n",
-    "pitches = unfiltered_pitches[bethe_regime]"
+    "filt = bethe_regime\n",
+    "es = kinetic_es[filt]\n",
+    "dedxs = unfiltered_dedxs[filt]\n",
+    "pitches = unfiltered_pitches[filt]"
    ]
   },
   {
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "id": "ea602742-3aa1-4a67-826a-f81ff00fb6d8",
    "metadata": {
     "tags": []
@@ -145,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "id": "74e578ff-b308-4bfb-b34f-8278446739a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "max_e = bethe_max # np.max(es)\n",
     "min_e = bethe_min # np.min(es)\n",
-    "num_bins = 10\n",
+    "num_bins = 20\n",
     "\n",
     "# Deprecated\n",
     "def log_bin_data(num_bins):\n",
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 73,
    "id": "cd8848c8-7c9f-41dc-aaf2-3939f2816202",
    "metadata": {},
    "outputs": [],
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 74,
    "id": "78d36a3f-1c63-4191-9b9e-99bf6dbbb936",
    "metadata": {
     "tags": []
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 75,
    "id": "f326731c-3a68-4035-b85c-a67720b75d9d",
    "metadata": {},
    "outputs": [],
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "id": "f61cb1f6-8bbf-434f-a826-98ff0a38f8de",
    "metadata": {},
    "outputs": [],
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "id": "2a0b08ff-4f39-487c-a954-686a6491bcb6",
    "metadata": {},
    "outputs": [],
@@ -296,12 +297,15 @@
     "    fit_x_L = np.linspace(0, 7, 1000)\n",
     "    fit_y_L = langau_fit(fit_x_L, *popt_L)\n",
     "    \n",
-    "    return popt_L, fit_x_L, fit_y_L"
+    "    resids = ydata - langau_fit(np.array(xdata), *popt_L)\n",
+    "    sumsq_resids = np.sqrt(np.sum(resids**2 / len(xdata)))\n",
+    "    \n",
+    "    return popt_L, fit_x_L, fit_y_L, sumsq_resids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 78,
    "id": "858af042-3513-439c-a3cc-7ec5eda02d1a",
    "metadata": {},
    "outputs": [],
@@ -311,18 +315,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 79,
    "id": "c1fca66a-e23e-4e7c-940a-f79884553e03",
    "metadata": {},
    "outputs": [],
    "source": [
     "fit_data_dict = []\n",
+    "\n",
     "for i in range(len(binned_dedx)):\n",
     "    bd = binned_dedx[i]\n",
     "    xdata, ydata = generate_one_freq_vs_dedx(bd, num_dedx_bins)\n",
-    "    fit_params, xfit, yfit = generate_fit(xdata, ydata)\n",
+    "    fit_params, xfit, yfit, rmse = generate_fit(xdata, ydata)\n",
     "    mpv, eta, sigma, A = fit_params\n",
-    "    fit_data_dict.append({'mpv': mpv, 'eta': eta, 'sigma': sigma, 'A': A, 'e_min': bin_edges[i], 'e_max': bin_edges[i+1]}) \n",
+    "    fit_data_dict.append({'mpv': mpv, 'eta': eta, 'sigma': sigma, 'A': A, 'e_min': bin_edges[i], 'e_max': bin_edges[i+1], 'rmse': rmse})\n",
     "\n",
     "fit_data = pd.DataFrame.from_dict(fit_data_dict)"
    ]
@@ -337,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 80,
    "id": "1019e937-2f1e-4514-b9eb-9c36e5d29a67",
    "metadata": {},
    "outputs": [
@@ -368,115 +373,258 @@
        "      <th>A</th>\n",
        "      <th>e_min</th>\n",
        "      <th>e_max</th>\n",
+       "      <th>rmse</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.797079</td>\n",
-       "      <td>0.087298</td>\n",
-       "      <td>0.115330</td>\n",
-       "      <td>127428.119039</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.375218</td>\n",
+       "      <td>1.787018</td>\n",
+       "      <td>0.095844</td>\n",
+       "      <td>0.111470</td>\n",
+       "      <td>88713.128146</td>\n",
+       "      <td>0.100015</td>\n",
+       "      <td>0.780561</td>\n",
+       "      <td>170.564037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.816533</td>\n",
-       "      <td>0.087761</td>\n",
-       "      <td>0.115853</td>\n",
-       "      <td>126006.899663</td>\n",
-       "      <td>1.375218</td>\n",
-       "      <td>1.769902</td>\n",
+       "      <td>1.789844</td>\n",
+       "      <td>0.088893</td>\n",
+       "      <td>0.115340</td>\n",
+       "      <td>91077.432579</td>\n",
+       "      <td>0.780561</td>\n",
+       "      <td>1.055800</td>\n",
+       "      <td>177.016700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.830271</td>\n",
-       "      <td>0.088239</td>\n",
-       "      <td>0.117956</td>\n",
-       "      <td>124317.479635</td>\n",
-       "      <td>1.769902</td>\n",
-       "      <td>2.226564</td>\n",
+       "      <td>1.795943</td>\n",
+       "      <td>0.087130</td>\n",
+       "      <td>0.114268</td>\n",
+       "      <td>92420.314859</td>\n",
+       "      <td>1.055800</td>\n",
+       "      <td>1.326991</td>\n",
+       "      <td>193.134320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.843914</td>\n",
-       "      <td>0.088397</td>\n",
-       "      <td>0.118956</td>\n",
-       "      <td>123196.396210</td>\n",
-       "      <td>2.226564</td>\n",
-       "      <td>2.742691</td>\n",
+       "      <td>1.811401</td>\n",
+       "      <td>0.088401</td>\n",
+       "      <td>0.114784</td>\n",
+       "      <td>90898.530954</td>\n",
+       "      <td>1.326991</td>\n",
+       "      <td>1.608833</td>\n",
+       "      <td>201.306618</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.855988</td>\n",
-       "      <td>0.089279</td>\n",
-       "      <td>0.121404</td>\n",
-       "      <td>121484.979251</td>\n",
-       "      <td>2.742691</td>\n",
-       "      <td>3.352991</td>\n",
+       "      <td>1.824164</td>\n",
+       "      <td>0.088211</td>\n",
+       "      <td>0.116918</td>\n",
+       "      <td>90250.759537</td>\n",
+       "      <td>1.608833</td>\n",
+       "      <td>1.908363</td>\n",
+       "      <td>205.149258</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1.865906</td>\n",
-       "      <td>0.090040</td>\n",
-       "      <td>0.121885</td>\n",
-       "      <td>119937.457408</td>\n",
-       "      <td>3.352991</td>\n",
-       "      <td>4.098100</td>\n",
+       "      <td>1.832521</td>\n",
+       "      <td>0.087250</td>\n",
+       "      <td>0.118784</td>\n",
+       "      <td>89287.960203</td>\n",
+       "      <td>1.908363</td>\n",
+       "      <td>2.246504</td>\n",
+       "      <td>214.974423</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>1.874859</td>\n",
-       "      <td>0.089674</td>\n",
-       "      <td>0.120163</td>\n",
-       "      <td>120993.382947</td>\n",
-       "      <td>4.098100</td>\n",
-       "      <td>5.010354</td>\n",
+       "      <td>1.841507</td>\n",
+       "      <td>0.088616</td>\n",
+       "      <td>0.117464</td>\n",
+       "      <td>89203.001766</td>\n",
+       "      <td>2.246504</td>\n",
+       "      <td>2.615314</td>\n",
+       "      <td>217.521133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>1.885359</td>\n",
-       "      <td>0.090642</td>\n",
-       "      <td>0.120163</td>\n",
-       "      <td>119364.020924</td>\n",
-       "      <td>5.010354</td>\n",
-       "      <td>6.139310</td>\n",
+       "      <td>1.854580</td>\n",
+       "      <td>0.089017</td>\n",
+       "      <td>0.123251</td>\n",
+       "      <td>87313.422967</td>\n",
+       "      <td>2.615314</td>\n",
+       "      <td>3.023302</td>\n",
+       "      <td>215.821084</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>1.890065</td>\n",
-       "      <td>0.090039</td>\n",
-       "      <td>0.120621</td>\n",
-       "      <td>119921.863222</td>\n",
-       "      <td>6.139310</td>\n",
-       "      <td>7.781651</td>\n",
+       "      <td>1.858393</td>\n",
+       "      <td>0.089467</td>\n",
+       "      <td>0.119941</td>\n",
+       "      <td>87696.216398</td>\n",
+       "      <td>3.023302</td>\n",
+       "      <td>3.494661</td>\n",
+       "      <td>215.869164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>1.896126</td>\n",
-       "      <td>0.090207</td>\n",
-       "      <td>0.118917</td>\n",
-       "      <td>120073.079459</td>\n",
-       "      <td>7.781651</td>\n",
-       "      <td>9.999993</td>\n",
+       "      <td>1.866062</td>\n",
+       "      <td>0.089977</td>\n",
+       "      <td>0.122309</td>\n",
+       "      <td>86423.307390</td>\n",
+       "      <td>3.494661</td>\n",
+       "      <td>4.036547</td>\n",
+       "      <td>221.557517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1.871411</td>\n",
+       "      <td>0.090074</td>\n",
+       "      <td>0.119565</td>\n",
+       "      <td>87208.732885</td>\n",
+       "      <td>4.036547</td>\n",
+       "      <td>4.673880</td>\n",
+       "      <td>226.251601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1.881176</td>\n",
+       "      <td>0.089710</td>\n",
+       "      <td>0.120331</td>\n",
+       "      <td>87145.580336</td>\n",
+       "      <td>4.673880</td>\n",
+       "      <td>5.388654</td>\n",
+       "      <td>223.250611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1.887516</td>\n",
+       "      <td>0.090635</td>\n",
+       "      <td>0.121167</td>\n",
+       "      <td>85828.188259</td>\n",
+       "      <td>5.388654</td>\n",
+       "      <td>6.267510</td>\n",
+       "      <td>226.268153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1.888289</td>\n",
+       "      <td>0.089557</td>\n",
+       "      <td>0.120365</td>\n",
+       "      <td>86861.907331</td>\n",
+       "      <td>6.267510</td>\n",
+       "      <td>7.432281</td>\n",
+       "      <td>231.164627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1.897235</td>\n",
+       "      <td>0.091250</td>\n",
+       "      <td>0.118418</td>\n",
+       "      <td>86417.149926</td>\n",
+       "      <td>7.432281</td>\n",
+       "      <td>8.878996</td>\n",
+       "      <td>226.640270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1.900774</td>\n",
+       "      <td>0.089549</td>\n",
+       "      <td>0.120998</td>\n",
+       "      <td>86327.038164</td>\n",
+       "      <td>8.878996</td>\n",
+       "      <td>10.919559</td>\n",
+       "      <td>235.988985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1.902902</td>\n",
+       "      <td>0.091219</td>\n",
+       "      <td>0.119648</td>\n",
+       "      <td>86153.117000</td>\n",
+       "      <td>10.919559</td>\n",
+       "      <td>13.898633</td>\n",
+       "      <td>212.109874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1.907552</td>\n",
+       "      <td>0.090270</td>\n",
+       "      <td>0.120068</td>\n",
+       "      <td>85971.837532</td>\n",
+       "      <td>13.898633</td>\n",
+       "      <td>18.754598</td>\n",
+       "      <td>231.663818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1.909524</td>\n",
+       "      <td>0.091261</td>\n",
+       "      <td>0.121017</td>\n",
+       "      <td>85374.067385</td>\n",
+       "      <td>18.754598</td>\n",
+       "      <td>29.675858</td>\n",
+       "      <td>231.502208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1.910890</td>\n",
+       "      <td>0.089169</td>\n",
+       "      <td>0.121289</td>\n",
+       "      <td>86087.363410</td>\n",
+       "      <td>29.675858</td>\n",
+       "      <td>99.989488</td>\n",
+       "      <td>241.754595</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        mpv       eta     sigma              A     e_min     e_max\n",
-       "0  1.797079  0.087298  0.115330  127428.119039  1.000000  1.375218\n",
-       "1  1.816533  0.087761  0.115853  126006.899663  1.375218  1.769902\n",
-       "2  1.830271  0.088239  0.117956  124317.479635  1.769902  2.226564\n",
-       "3  1.843914  0.088397  0.118956  123196.396210  2.226564  2.742691\n",
-       "4  1.855988  0.089279  0.121404  121484.979251  2.742691  3.352991\n",
-       "5  1.865906  0.090040  0.121885  119937.457408  3.352991  4.098100\n",
-       "6  1.874859  0.089674  0.120163  120993.382947  4.098100  5.010354\n",
-       "7  1.885359  0.090642  0.120163  119364.020924  5.010354  6.139310\n",
-       "8  1.890065  0.090039  0.120621  119921.863222  6.139310  7.781651\n",
-       "9  1.896126  0.090207  0.118917  120073.079459  7.781651  9.999993"
+       "         mpv       eta     sigma             A      e_min      e_max  \\\n",
+       "0   1.787018  0.095844  0.111470  88713.128146   0.100015   0.780561   \n",
+       "1   1.789844  0.088893  0.115340  91077.432579   0.780561   1.055800   \n",
+       "2   1.795943  0.087130  0.114268  92420.314859   1.055800   1.326991   \n",
+       "3   1.811401  0.088401  0.114784  90898.530954   1.326991   1.608833   \n",
+       "4   1.824164  0.088211  0.116918  90250.759537   1.608833   1.908363   \n",
+       "5   1.832521  0.087250  0.118784  89287.960203   1.908363   2.246504   \n",
+       "6   1.841507  0.088616  0.117464  89203.001766   2.246504   2.615314   \n",
+       "7   1.854580  0.089017  0.123251  87313.422967   2.615314   3.023302   \n",
+       "8   1.858393  0.089467  0.119941  87696.216398   3.023302   3.494661   \n",
+       "9   1.866062  0.089977  0.122309  86423.307390   3.494661   4.036547   \n",
+       "10  1.871411  0.090074  0.119565  87208.732885   4.036547   4.673880   \n",
+       "11  1.881176  0.089710  0.120331  87145.580336   4.673880   5.388654   \n",
+       "12  1.887516  0.090635  0.121167  85828.188259   5.388654   6.267510   \n",
+       "13  1.888289  0.089557  0.120365  86861.907331   6.267510   7.432281   \n",
+       "14  1.897235  0.091250  0.118418  86417.149926   7.432281   8.878996   \n",
+       "15  1.900774  0.089549  0.120998  86327.038164   8.878996  10.919559   \n",
+       "16  1.902902  0.091219  0.119648  86153.117000  10.919559  13.898633   \n",
+       "17  1.907552  0.090270  0.120068  85971.837532  13.898633  18.754598   \n",
+       "18  1.909524  0.091261  0.121017  85374.067385  18.754598  29.675858   \n",
+       "19  1.910890  0.089169  0.121289  86087.363410  29.675858  99.989488   \n",
+       "\n",
+       "          rmse  \n",
+       "0   170.564037  \n",
+       "1   177.016700  \n",
+       "2   193.134320  \n",
+       "3   201.306618  \n",
+       "4   205.149258  \n",
+       "5   214.974423  \n",
+       "6   217.521133  \n",
+       "7   215.821084  \n",
+       "8   215.869164  \n",
+       "9   221.557517  \n",
+       "10  226.251601  \n",
+       "11  223.250611  \n",
+       "12  226.268153  \n",
+       "13  231.164627  \n",
+       "14  226.640270  \n",
+       "15  235.988985  \n",
+       "16  212.109874  \n",
+       "17  231.663818  \n",
+       "18  231.502208  \n",
+       "19  241.754595  "
       ]
      },
      "metadata": {},
@@ -489,12 +637,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 81,
    "id": "4afb3d5e-e117-49a6-aff6-7656f7e837f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fit_data.to_csv(r'./data/fit_data/narrow_fit_data.csv', index=False, header=True)"
+    "# fit_data.to_csv(r'./data/fit_data/base_fit_data.csv', index=False, header=True)"
    ]
   },
   {
