Delta ray removal added to analysis

--- a/Analyze.ipynb
+++ b/Analyze.ipynb
@@ -63,8 +63,8 @@
     {
      "data": {
       "text/plain": [
-       "[<TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fbfbc4c1080>,\n",
-       " <TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fbfbc4c13c8>]"
+       "[<TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fc6e0ab8dd8>,\n",
+       " <TTree 'CalorimetryAnalyzer' (101 branches) at 0x7fc6e0ab8eb8>]"
       ]
      },
      "execution_count": 4,
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,6 @@
      "text": [
       "Generating Principal Dataframe...\n",
       "Loaded dedx_y data...\n",
-      "[ True  True  True ...  True  True  True]\n",
       "Loaded rr_y data...\n",
       "Loaded pitch_y data...\n",
       "Generated!\n",
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,11 +302,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#--------------------------------------Initialize debug counting variables-----------------------------------------\n",
+    "from util.theory import deltas\n",
+    "\n",
     "# particle counts\n",
     "num_impurities = 0\n",
     "num_mu = 0\n",
@@ -320,8 +321,18 @@
     "num_highde = 0\n",
     "num_highdedx = 0\n",
     "num_highpitch = 0\n",
+    "\n",
+    "def truncate_at(dedxs, pitches, es):\n",
+    "    bad_dedx_locs, = np.where(dedxs > 100)\n",
+    "    bad_e_locs, = np.where(es <= 0)\n",
+    "    bad_pitch_locs, = np.where(~((0.3 < pitches) & (pitches < 0.3 / np.cos(70*np.pi/180))))\n",
+    "    bad_locs = np.concatenate((bad_dedx_locs, bad_e_locs, bad_pitch_locs))\n",
+    "\n",
+    "    if len(bad_locs) == 0:\n",
+    "        return -1\n",
+    "    return np.min(bad_locs)\n",
     "    \n",
-    "def analyze_data(df):\n",
+    "def analyze_data(df, delta_rm=True):\n",
     "    reset_all_counts()\n",
     "    global p_count, num_particles_partially_skipped, num_skipped_dp\n",
     "    \n",
@@ -355,40 +366,44 @@
     "\n",
     "    print(\"Analyzing...\")\n",
     "    for p in particle_idxs:\n",
-    "\n",
     "        if p_count > running_count_for_pcnt_increment:\n",
     "            print(f\"{(running_count_for_pcnt_increment / tot_particles)*100:.0f}%        \", end = '\\r', flush=True)\n",
     "            running_count_for_pcnt_increment += count_per_pcnt\n",
-    "\n",
+    "            \n",
     "        p_count += 1\n",
-    "        data_points = df.loc[p,:].index\n",
-    "        prev_range = 0\n",
-    "\n",
-    "        e = true_es[p]                               # True energy of the particle (GeV)\n",
-    "        pur = purity[p]\n",
-    "        mu = mu_type[p]\n",
-    "\n",
-    "        update_whole_particle_debug_data(e, pur, mu)        \n",
-    "\n",
-    "        for d in data_points:\n",
-    "            i = (p,d)\n",
-    "            x = rrange[i]                                # Particle current x\n",
-    "            dedx = e_losses_per_step[i]                  # Particle recent energy loss (MeV/cm)\n",
-    "            lovercostheta = pitch[i]                         # Pitch (For collection wires spaced by 3mm)\n",
-    "            de = (rrange[i] - prev_range)*dedx/1000      # Approx energy lost since last step (GeV)\n",
-    "\n",
-    "            if datapoint_is_invalid(de, dedx, lovercostheta, e, dedx_cutoff, pitch_high_cutoff):\n",
-    "                num_particles_partially_skipped += 1\n",
-    "                num_skipped_dp += len(data_points) - d\n",
-    "                break\n",
-    "            else:\n",
-    "                es.append(e)\n",
-    "                dedxs.append(dedx)\n",
-    "                pitches.append(lovercostheta)\n",
-    "                e -= de                                  # Lower energy accordingly\n",
-    "                prev_range = rrange[i]                   # Update prev_range\n",
-    "\n",
-    "\n",
+    "        _dedxs = e_losses_per_step.loc[p].to_numpy()\n",
+    "        _pitches = pitch.loc[p].to_numpy()\n",
+    "        rrs = rrange.loc[p].to_numpy()\n",
+    "        e = true_es.loc[p]\n",
+    "        pur = purity.loc[p]\n",
+    "        mu = mu_type.loc[p]\n",
+    "        \n",
+    "        des = np.ediff1d(rrs, to_begin=rrs[0]) * _dedxs / 1000\n",
+    "        _es = e - np.cumsum(des)\n",
+    "        \n",
+    "        # Truncate when a datapoint is obviously bad, if fewer than 10 good dps, continue\n",
+    "        trunc = truncate_at(_dedxs, _pitches, _es)\n",
+    "        if (0 <= trunc) and (trunc < 10):\n",
+    "            num_skipped_dp += 1\n",
+    "            continue\n",
+    "        \n",
+    "        _dedxs = _dedxs[:trunc]\n",
+    "        _pitches = _pitches[:trunc]\n",
+    "        _es = _es[:trunc]\n",
+    "        \n",
+    "        # Get rid of deltas\n",
+    "        # Configure theory to have deltas return all deltalocs.\n",
+    "        delta_locs, count = deltas(_dedxs)\n",
+    "        _dedxs = np.delete(_dedxs, delta_locs)\n",
+    "        _pitches = np.delete(_pitches, delta_locs)\n",
+    "        _es = np.delete(_es, delta_locs)\n",
+    "        \n",
+    "        update_whole_particle_debug_data(e, pur, mu)  \n",
+    "        \n",
+    "        dedxs.extend(_dedxs)\n",
+    "        pitches.extend(_pitches)\n",
+    "        es.extend(_es)\n",
+    "        \n",
     "    print(\"100%     \")\n",
     "    end = time.perf_counter()\n",
     "    t = end-start\n",
@@ -400,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -409,15 +424,15 @@
      "text": [
       "Analyzing...\n",
       "100%       \n",
-      "Done! Analysis time: 1m 8.7s\n",
-      "Impurities: 1492\n",
-      "Muons: 2370\n",
-      "Antimuons: 2431\n",
-      "Particles partially skipped: 2979\n",
-      "Total skipped data points: 397859\n",
-      "Particles with a high dE data point: 3\n",
-      "Particles with a high dEdx data point: 145\n",
-      "Particles with a high pitch data point: 2836\n"
+      "Done! Analysis time: 2m 46.6s\n",
+      "Impurities: 1039\n",
+      "Muons: 1791\n",
+      "Antimuons: 1962\n",
+      "Particles partially skipped: 0\n",
+      "Total skipped data points: 4971\n",
+      "Particles with a high dE data point: 0\n",
+      "Particles with a high dEdx data point: 0\n",
+      "Particles with a high pitch data point: 0\n"
      ]
     }
    ],
