--- a/MC_Reconstruction.ipynb
+++ b/MC_Reconstruction.ipynb
@@ -387,88 +387,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 3,
    "id": "e9d7cd04-1e87-4c40-8871-8953d3bbce36",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bin 0...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/samcrossley/anaconda3/envs/pyRoot/lib/python3.6/site-packages/ipykernel_launcher.py:6: IntegrationWarning: The algorithm does not converge.  Roundoff error is detected\n",
-      "  in the extrapolation table.  It is assumed that the requested tolerance\n",
-      "  cannot be achieved, and that the returned result (if full_output = 1) is \n",
-      "  the best which can be obtained.\n",
-      "  \n",
-      "/home/samcrossley/anaconda3/envs/pyRoot/lib/python3.6/site-packages/ipykernel_launcher.py:6: IntegrationWarning: The integral is probably divergent, or slowly convergent.\n",
-      "  \n",
-      "/home/samcrossley/anaconda3/envs/pyRoot/lib/python3.6/site-packages/scipy/optimize/minpack.py:175: RuntimeWarning: The iteration is not making good progress, as measured by the \n",
-      "  improvement from the last five Jacobian evaluations.\n",
-      "  warnings.warn(msg, RuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populated!\n",
-      "Bin 1...\n",
-      "Populated!\n",
-      "Bin 2...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/samcrossley/anaconda3/envs/pyRoot/lib/python3.6/site-packages/scipy/optimize/minpack.py:175: RuntimeWarning: The iteration is not making good progress, as measured by the \n",
-      "  improvement from the last ten iterations.\n",
-      "  warnings.warn(msg, RuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populated!\n",
-      "Bin 3...\n",
-      "Populated!\n",
-      "Bin 4...\n",
-      "Populated!\n",
-      "Bin 5...\n",
-      "Populated!\n",
-      "Bin 6...\n",
-      "Populated!\n",
-      "Bin 7...\n",
-      "Populated!\n",
-      "Bin 8...\n",
-      "Populated!\n",
-      "Bin 9...\n",
-      "Populated!\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown format code 'd' for object of type 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-330-1148c1ca9180>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mperf_counter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Total analysis time {t//60:d}m {t%60:.1f}s'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: Unknown format code 'd' for object of type 'float'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "muons_per_ebin = 10\n",
+    "%%script false --no-raise-error\n",
     "\n",
+    "muons_per_ebin = 10\n",
     "start = time.perf_counter()\n",
     "\n",
     "dedxs_dict = {} \n",
@@ -590,22 +516,6 @@
     "    like_data.to_csv(rf'../data/reconstructions/{save}', index=False, header=True)\n",
     "    print('Saved!')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "233f08e9-fb3a-4866-bde4-0e353200e7a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3134d108-a186-4877-afb3-2c109a8fea5a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
