Fixed MC spread application error

--- a/Bias_Search.ipynb
+++ b/Bias_Search.ipynb
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "43d073ee-ae6e-4080-beee-227fc402197c",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "27241bf7-8b82-4c8e-87d1-805a27c2ec99",
    "metadata": {
     "tags": []
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "123a21ca-0e6e-4959-ac1b-9e29626c4e51",
    "metadata": {},
    "outputs": [],
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "39b18018-11ee-49ea-8ec7-7db13bdd2461",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "fe481ff5-a899-4067-8542-8e067cffe0df",
    "metadata": {
     "tags": []
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "d5cbc2e0-f4ff-4a3f-93c1-f3a3b233f906",
    "metadata": {},
    "outputs": [],
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "c5855e51-9fef-4cb9-a8bd-f7aa61d90d50",
    "metadata": {},
    "outputs": [],
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "84f35842-3267-4dc4-a16e-eede16819472",
    "metadata": {},
    "outputs": [],
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "19f18f86-50db-4d3f-869a-e6fe048c29e4",
    "metadata": {},
    "outputs": [],
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "7003c5cd-797c-4a10-971a-37dd59996728",
    "metadata": {},
    "outputs": [],
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "f333d436-05b1-4fab-9556-d404ec68db44",
    "metadata": {},
    "outputs": [],
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "d1a50f4e-5519-4f6e-b1a8-6e04b725e3f0",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "0e79dea5-b85c-4b6a-a041-d3d29de1f5a4",
    "metadata": {},
    "outputs": [],
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "aaed0b20-1800-4f1d-ada7-17f0b22f8c4b",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "18d52bda-0f21-42d9-a05a-3ce8ec2c0ae5",
    "metadata": {},
    "outputs": [],
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "735da719-24f3-42a7-b757-62fba2b4ba17",
    "metadata": {},
    "outputs": [
@@ -1091,7 +1091,8 @@
     "# %%script false --no-raise-error\n",
     "fig = plt.figure(figsize=(12,15))\n",
     "ax = plt.axes(projection='3d')\n",
-    "plot_individual_tracks(ax, e_slice_df, e_slice_df.index.get_level_values(0).unique())"
+    "plot_individual_tracks(ax, e_slice_df, e_slice_df.index.get_level_values(0).unique())\n",
+    "fig.savefig('track_visualization.png', bbox_inches='tight')"
    ]
   },
   {
